// Vitest Snapshot v1

exports[`match snapshot for button template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "align": "right",
                    "background-color": "#8a3c90",
                    "border": "1px solid transparent",
                    "border-radius": "15px",
                    "color": "#9d1d1d",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "font-family": "Ubuntu, Helvetica, Arial, sans-serif, Helvetica, Arial, sans-serif",
                    "font-size": "16px",
                    "href": "https://google.com",
                    "inner-padding": "5px 20px 5px 20px",
                    "padding": "20px 20px 20px 20px",
                  },
                  "content": "<div class=\\"txtTinyMce-wrapper\\" style=\\"font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;\\" data-mce-style=\\"font-family: TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif;\\"><p dir=\\"ltr\\" style=\\"word-break: break-word;\\" data-mce-style=\\"word-break: break-word;\\"><code spellcheck=\\"false\\" data-bee-type=\\"mergetag\\" data-bee-code=\\"\\" data-bee-name=\\"Company City (HubSpot)\\" data-bee-value=\\"{{ site_settings.company_city }}\\"><q>no-content</q></code>&nbsp;Button</p></div>",
                  "tagName": "mj-button",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for divider template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "border-color": "#BBBBBB",
                    "border-style": "solid",
                    "border-width": "1px",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "padding": "20px 20px 20px 20px",
                    "padding-right": "20px",
                    "padding-top": "20px",
                  },
                  "tagName": "mj-divider",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for gif template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "alt": "Image",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "href": "",
                    "padding": "undefined undefined undefined undefined",
                    "src": "https://media1.giphy.com/media/9JrvLb0fnrn7k1ZjhX/giphy.gif?cid=20eb4e9d8a5zq9r9952ohvawhy604tzz5lc1c3ctjuet0bfq&rid=giphy.gif&ct=g",
                    "width": "480px",
                  },
                  "tagName": "mj-gif",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for image template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "alt": "alt text",
                    "containerWidth": 645,
                    "css-class": "hide_on_mobile",
                    "fluid-on-mobile": "true",
                    "href": "href",
                    "padding": "15px 15px 15px 15px",
                    "src": "https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/919280_903640/B.jpg",
                    "width": "548.25px",
                  },
                  "tagName": "mj-image",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for social template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "align": undefined,
                    "containerWidth": 645,
                    "css-class": undefined,
                    "icon-padding": "7.5px",
                    "icon-size": "32px",
                    "padding": "15px 15px 15px 15px",
                    "text-mode": "false",
                  },
                  "children": [
                    {
                      "attributes": {
                        "alt": "Facebookasd",
                        "background-color": "transparent",
                        "href": "https://www.facebook.com/asd",
                        "name": "facebook",
                        "src": "https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/circle-blue/facebook@2x.png",
                      },
                      "tagName": "mj-social-element",
                    },
                    {
                      "attributes": {
                        "alt": "Twitter",
                        "background-color": "transparent",
                        "href": "https://www.twitter.com/",
                        "name": "twitter",
                        "src": "https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/circle-blue/twitter@2x.png",
                      },
                      "tagName": "mj-social-element",
                    },
                    {
                      "attributes": {
                        "alt": "Linkedin",
                        "background-color": "transparent",
                        "href": "https://www.linkedin.com/",
                        "name": "linkedin",
                        "src": "https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/circle-blue/linkedin@2x.png",
                      },
                      "tagName": "mj-social-element",
                    },
                    {
                      "attributes": {
                        "alt": "Instagram",
                        "background-color": "transparent",
                        "href": "https://www.instagram.com/",
                        "name": "instagram",
                        "src": "https://app-rsrc.getbee.io/public/resources/social-networks-icon-sets/circle-blue/instagram@2x.png",
                      },
                      "tagName": "mj-social-element",
                    },
                    {
                      "attributes": {
                        "alt": "Custom",
                        "background-color": "transparent",
                        "href": "https://google.com",
                        "name": "2cc7b44f-e594-4738-9415-8ff5ee7a9efc",
                        "src": "https://app-rsrc.getbee.io/public/resources/placeholders/custom-icon-placeholder.png",
                      },
                      "tagName": "mj-social-element",
                    },
                  ],
                  "style": "rounded",
                  "tagName": "mj-social",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for spacer template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "containerWidth": 645,
                    "css-class": undefined,
                    "height": "65px",
                  },
                  "tagName": "mj-spacer",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;

exports[`match snapshot for video template 1`] = `
{
  "attributes": {
    ":color": "#000000",
    ":font-family": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    ":line-height": "1.5",
    "a:color": "#296eab",
    "button:background-color": "#e85034",
    "containerWidth": 645,
    "fonts": "TimesNewRoman, Times New Roman, Times, Beskerville, Georgia, serif",
    "h1:color": "#000",
    "h1:font-family": "Helvetica, sans-serif",
    "h2:color": "#000",
    "h2:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "h3:color": "#000",
    "h3:font-family": "Ubuntu, Helvetica, Arial, sans-serif",
    "mj-button": [],
    "mj-text": {
      "font-size": 15,
      "line-height": 1.5,
    },
  },
  "children": [
    {
      "attributes": {
        "background-color": "#6f2e2e",
        "containerWidth": 645,
      },
      "children": [
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [
                {
                  "attributes": {
                    "alt": "Rick Astley - Never Gonna Give You Up (Official Music Video)",
                    "containerWidth": 645,
                    "css-class": undefined,
                    "href": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
                    "padding": "10px 10px 10px 10px",
                    "src": "https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg",
                    "videoSrc": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
                    "width": undefined,
                  },
                  "isVideo": true,
                  "tagName": "mj-image",
                  "uid": "mocked-uuid",
                },
              ],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
        {
          "attributes": {
            "background-color": "#6f2e2e",
            "background-repeat": "no-repeat",
            "background-size": undefined,
            "background-url": "none",
            "css-class": undefined,
            "full-width": false,
            "in-group": false,
            "padding": "0px 0px 0px 0px",
          },
          "backgroundColor": null,
          "backgroundImage": null,
          "children": [
            {
              "attributes": {
                "background-color": "transparent",
                "border-bottom": "0px solid transparent",
                "border-left": "0px solid transparent",
                "border-right": "0px solid transparent",
                "border-top": "0px solid transparent",
                "vertical-align": "top",
                "width": "100%",
              },
              "children": [],
              "tagName": "mj-column",
              "uid": "mocked-uuid",
            },
          ],
          "layout": 1,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "tagName": "mj-section",
          "uid": "mocked-uuid",
        },
      ],
      "tagName": "mj-body",
    },
  ],
  "fonts": [
    "'Roboto', Tahoma, Verdana, Segoe, sans-serif",
    "'Abril Fatface', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Merriwheater', 'Georgia', serif",
    "'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Nunito', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Bitter', Georgia, Times, 'Times New Roman', serif",
    "'Permanent Marker', Impact, Charcoal, sans-serif",
    "'Roboto Slab', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Cabin', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Oxygen', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif",
    "'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif",
    "'Lato', Tahoma, Verdana, Segoe, sans-serif",
    "'Ubuntu', Tahoma, Verdana, Segoe, sans-serif",
    "'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif",
    "'Droid Serif', Georgia, Times, 'Times New Roman', serif",
    "'Playfair Display', Georgia, serif",
    "'Poppins', Arial, Helvetica, sans-serif",
  ],
  "style": {
    "a": {
      "color": "#296eab",
    },
    "h1": {
      "font-family": "\\"Cabin\\", sans-serif",
      "font-size": "22px",
    },
    "h2": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "17px",
    },
    "h3": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "13px",
    },
    "li": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ol": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "p": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
    "ul": {
      "font-family": "Ubuntu, Helvetica, Arial",
      "font-size": "11px",
    },
  },
  "tagName": "mj-global-style",
}
`;
